deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-anything
  namespace: api-anything
  labels:
    app: api-anything
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: api-anything
